<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignUpActivity"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/create_new_account"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            >



            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_110sdp"
                android:scaleType="centerCrop"
                app:riv_oval="true"
                android:src="@drawable/img_1"
                android:background="@drawable/background_profile_image"


            />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:scaleType="centerCrop"
                app:riv_oval="true"
                android:src="@drawable/img_2"
                android:background="@drawable/background_image"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_50sdp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp"
                android:visibility="invisible"
                />


        </FrameLayout>

        <TextView
            android:id="@+id/erreur_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15ssp"
            android:text="test"
            android:textColor="@color/error"
            android:visibility="invisible"
            />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/background_input"
            android:hint="@string/name_hunt"
            android:textColorHint="@color/secondary_text"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"


            />

        <TextView
            android:id="@+id/erreur_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5ssp"
            android:text="test"
            android:textColor="@color/error"
            android:visibility="invisible"
            />

        <EditText
            android:id="@+id/inputFirstName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/background_input"
            android:hint="@string/first_name_hunt"
            android:textColorHint="@color/secondary_text"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"

            />

        <TextView
            android:id="@+id/erreur_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5ssp"
            android:text="test"
            android:textColor="@color/error"
            android:visibility="invisible"
            />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/background_input"
            android:hint="@string/input_email_hunt"
            android:textColorHint="@color/secondary_text"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"

            />

        <TextView
            android:id="@+id/erreur_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5ssp"
            android:text="test"
            android:textColor="@color/error"
            android:visibility="invisible"
            />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/background_input"
            android:hint="@string/input_password_hunt"
            android:textColorHint="@color/secondary_text"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"

            />

        <TextView
            android:id="@+id/erreur_confirmpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5ssp"
            android:text="test"
            android:textColor="@color/error"
            android:visibility="invisible"
            />

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/background_input"
            android:hint="@string/confirm_password_hunt"
            android:textColorHint="@color/secondary_text"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/sign_up"

            />

        <TextView
            android:id="@+id/texSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/sign_in"
            android:textColor="@color/primary"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>